<resources>
    <string name="app_name">readSmarter</string>
    <string name="title_catalog">Каталог</string>
    <string name="title_my_books">Мои книги</string>
    <string name="title_profile">Профиль</string>
    <string name="catalog_title_text">Поиск</string>
    <string name="arrow_back_description">Назад</string>
    <string name="sort_description">Сортировать</string>
    <string name="categories_title_text">Категории</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_sheet_title">Сортировать по</string>
    <string name="bottom_sheet_button">Применить</string>
    <string name="sort_1">Популярности</string>
    <string name="sort_2">Новизне</string>
</resources>