<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.catalog.CatalogFragment"
    android:paddingVertical="24dp"
    android:paddingHorizontal="16dp">

    <LinearLayout
        android:id="@+id/catalog_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:divider="@drawable/divider"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/arrow_back_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:contentDescription="@string/arrow_back_description"
                android:background="@android:color/transparent"
                android:layout_marginRight="12dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/catalog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/catalog_title_text"
                android:fontFamily="monospace"
                android:textFontWeight="700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="1">
            <!--Gone - layoutWeight = 0.92-->
            <SearchView
                android:id="@+id/booksSearchView"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_rounded"
                android:iconifiedByDefault="false"
                android:queryBackground="@android:color/transparent"
                android:queryHint="Найти книгу" />

            <ImageButton
                android:id="@+id/sort_button"
                android:layout_height="wrap_content"
                android:src="@drawable/sort"
                android:layout_marginLeft="8dp"
                android:layout_width="0dp"
                android:layout_weight="0.07"
                android:contentDescription="@string/sort_description"
                android:background="@android:color/transparent"
                android:visibility="gone" />
        </LinearLayout>


    </LinearLayout>

    <FrameLayout
        app:layout_constraintTop_toBottomOf="@+id/catalog_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/sub_fragment_catalog"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>